Rename notes map to index
